Animation fixes, minor changes * Changed a few animations * Changed accent color of debug input slider * Added a few comments describing how functions worked * Change_weight func now accepts weight if larger than or equal to 20 * Fixed function that removes debug controls * Removed way to hide debug controls * Debug controls can still be hidden via console using hide_debug() * hide_debug() is currently broken and shifts the entire header * Added BMI chip * Added BMI calculation function * BMI chip background changes color based on status * Added ids to weight chip and BMI chip * Added classes to <body> tags * Organization & optimization * Removed easter egg in Your Profile page * Fixed scrolling bug on dashboard page

--- a/articles/article_viewer.css
+++ b/articles/article_viewer.css
@@ -8,6 +8,27 @@
 body {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+}
+
+/* šířka scrollbaru */
+::-webkit-scrollbar {
+    width: 1rem;
+}
+  
+  /* pozadí scrollbaru */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+  
+  /* scrollbar */
+  ::-webkit-scrollbar-thumb {
+    background: #c1c9c9;
+}
+  
+  /* scrollbar při přejetí */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #9abbaf;
 }
 
 #backbutton {
@@ -52,18 +73,42 @@ body {
 }
 
 @keyframes arrow_cycle {
-    0% {margin-right: 0rem;}
-    10% {margin-right: -2rem; scale: 0;}
-    12% {margin-right: 2rem; scale: 0;}
-    42% {margin-right: 0rem; scale: 1;}
+    0% {
+        margin-right: 0rem;
+    }
+
+    10% {
+        margin-right: -2rem;
+        scale: 0;
+    }
+
+    12% {
+        margin-right: 2rem;
+        scale: 0;
+    }
+
+    42% {
+        margin-right: 0rem;
+        scale: 1;
+    }
 }
 
 @keyframes fade_out {
-    from {opacity: 1;}
-    to {opacity: 0;}
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+    }
 }
 
 @keyframes fade_in {
-    from {opacity: 0;}
-    to {opacity: 1;}
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
